# CryptographicFunctions

./: CMakeLists.txt  README.md  cryptos.sln
cryptos/: BLAKE2s.cpp  BerlekampMassey.cpp  Blake2b.cpp  Hashes.cpp  Hashes.h  MD5.cpp  SHA1.cpp  SHA256.cpp  SHA3.cpp  SHA512.cpp  algos.cpp  cryptos.cpp  cryptos.vcxproj  cryptos.vcxproj.filters  test.txt
include/: Algos.h  BLAKE2b.h  BLAKE2s.h  MD5.h  SHA1.h  SHA256.h  SHA3.h  SHA512.h
main/: main.cpp
src/: Algos.cpp  BLAKE2b.cpp  BLAKE2s.cpp  MD5.cpp  SHA1.cpp  SHA256.cpp  SHA3.cpp  SHA512.cpp
